<resources>
    <string name="app_name">JotMe</string>

    <!--DetailFragment Fragment label text -->
    <string name="label_title">Title</string>
    <string name="label_tag">Tag(s)</string>
    <string name="label_message">Message</string>

    <!-- Empty recycler and empty detail view texts -->
    <string name="empty_recycler_text">There are no Jots to display</string>
    <string name="empty_recycler_detail_text">Add a Jot by clicking + button</string>

    <!-- Main toolbar title texts -->
    <string name="main_toolbar_title_detail">Detail</string>
    <string name="main_toolbar_title_add">New Jot</string>
    <string name="main_toolbar_title_edit">Edit Jot</string>

    <!-- Empty edittext hint texts -->
    <string name="empty_title_edit">No Title</string>
    <string name="empty_tag_edit">No Tag</string>
    <string name="empty_message_edit">No Message</string>

    <!-- Menu texts -->
    <string name="searchview_hint">Search Tags</string>
    <string name="searchview_title">Search</string>
    <string name="signout_title">Sign Out</string>

    <!-- Notification texts -->
    <string name="notification_context_title">Reminder</string>
    <string name="notification_context_text">Have you used JotMe lately?</string>

    <!-- Toast texts -->
    <string name="toast_signed_in">Signed In!</string>
    <string name="toast_signed_in_cancelled">Sign In Cancelled</string>
    <string name="toast_signed_out">Signed Out</string>

    <!-- Content descriptions -->
    <string name="content_description_title">This is the title for the Jot</string>
    <string name="content_description_tag">This is a tag for the Jot</string>
    <string name="content_description_message">This is a message for the Jot</string>
    <string name="content_description_fab_add">Create a new Jot</string>
    <string name="content_description_fab_edit">Edit selected Jot</string>
    <string name="content_description_fab_save">Save changes to Jot</string>
    <string name="content_description_fab_delete">Delete current Jot</string>
    <string name="content_description_fab_cancel">Cancel changes to Jot</string>

    <!-- Sample texts -->
    <string name="sample_message">This is a sample message.</string>
    <string name="sample_title">This is a sample title</string>
    <string name="sample_tag">Tag</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
