<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.josephcostlow.jotme.DetailFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/detail_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/detail_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:id="@+id/detail_guideline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".20" />

            <TextView
                android:id="@+id/detail_label_title"
                style="@style/detail_label_style"
                android:layout_marginTop="24dp"
                android:text="@string/label_title"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/detail_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_label_tag"
                style="@style/detail_label_style"
                android:layout_marginTop="16dp"
                android:text="@string/label_tag"
                app:layout_constraintRight_toRightOf="@+id/detail_label_title"
                app:layout_constraintTop_toBottomOf="@+id/detail_label_title" />

            <TextView
                android:id="@+id/detail_label_message"
                style="@style/detail_label_style"
                android:layout_marginTop="16dp"
                android:text="@string/label_message"
                app:layout_constraintRight_toLeftOf="@+id/detail_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_tag_three" />

            <ScrollView
                android:id="@+id/message_sv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detail_label_message"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/message_tv"
                    style="@style/detail_message_value_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sample_message" />
            </ScrollView>

            <TextView
                android:id="@+id/text_title"
                style="@style/detail_value_style"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/detail_label_title"
                app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
                tools:text="@string/sample_title" />

            <TextView
                android:id="@+id/text_tag_one"
                style="@style/detail_tag_value_style"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
                app:layout_constraintTop_toTopOf="@+id/detail_label_tag"
                tools:text="@string/sample_tag" />

            <TextView
                android:id="@+id/text_tag_two"
                style="@style/detail_tag_value_style"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_tag_one"
                tools:text="@string/sample_tag" />

            <TextView
                android:id="@+id/text_tag_three"
                style="@style/detail_tag_value_style"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_tag_two"
                tools:text="@string/sample_tag" />

            <android.support.v7.widget.CardView
                android:id="@+id/empty_recycler_detail_card"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeightLarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <TextView
                    android:id="@+id/empty_recycler_detail_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/black"
                    tools:text="@string/empty_recycler_detail_text"/>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
