<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.josephcostlow.jotme.EditFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/edit_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/edit_nested_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/edit_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.Guideline
                    android:id="@+id/edit_guideline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".20"/>

                <TextView
                    android:id="@+id/edit_label_title"
                    style="@style/edit_label_style"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/label_title"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/edit_guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/edit_label_tag"
                    style="@style/edit_label_style"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/label_tag"
                    app:layout_constraintRight_toRightOf="@+id/edit_label_title"
                    app:layout_constraintTop_toBottomOf="@+id/edit_label_title"/>

                <TextView
                    android:id="@+id/edit_label_message"
                    style="@style/edit_label_style"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_message"
                    app:layout_constraintRight_toLeftOf="@+id/edit_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/edit_edit_tag_three" />

                <EditText
                    android:id="@+id/edit_edit_title"
                    style="@style/edit_title_style"
                    android:layout_marginBottom="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_label_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="@+id/edit_guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/edit_label_title"
                    tools:text="@string/sample_title" />

                <EditText
                    android:id="@+id/edit_edit_tag_one"
                    style="@style/edit_tag_style"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_label_tag"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="@+id/edit_guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/edit_label_tag"
                    tools:text="@string/sample_tag" />

                <EditText
                    android:id="@+id/edit_edit_tag_two"
                    style="@style/edit_tag_style"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="@+id/edit_guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_edit_tag_one"
                    tools:text="@string/sample_tag" />

                <EditText
                    android:id="@+id/edit_edit_tag_three"
                    style="@style/edit_tag_style"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="@+id/edit_guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_edit_tag_two"
                    tools:text="@string/sample_tag" />

                <EditText
                    android:id="@+id/edit_edit_message"
                    style="@style/edit_message_style"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/edit_guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_edit_tag_three"
                    tools:text="@string/sample_message" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>

</FrameLayout>
